# ROS2_notes

./: README.md
01_Basics/: 00_workspaces_ES.md  01_nodes_and_topics_ES.md
01_Basics/00_Workspaces_and_packages/: workspaces_ES.md
01_Basics/00_Workspaces_and_packages/ws_workspace/install/: local_setup.sh  setup.sh
01_Basics/00_Workspaces_and_packages/ws_workspace/install/pkg_package/share/pkg_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
01_Basics/00_Workspaces_and_packages/ws_workspace/log/: latest_build  latest_test
01_Basics/00_Workspaces_and_packages/ws_workspace/src/pkg_package/: CMakeLists.txt  package.xml
01_Basics/01_Nodes_and_Topics/: nodes_and_topics.md  nodes_and_topics_ES.md
01_Basics/ws_workspace/install/: local_setup.sh  setup.sh
01_Basics/ws_workspace/install/pkg_pub/lib/pkg_pub/: talker
01_Basics/ws_workspace/install/pkg_pub/share/pkg_pub/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
01_Basics/ws_workspace/install/pkg_pub/share/pkg_pub/cmake/: pkg_pubConfig.cmake
01_Basics/ws_workspace/log/: latest_build
01_Basics/ws_workspace/src/pkg_pub/: CMakeLists.txt  package.xml
