<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_pub</name>
  <version>0.0.0</version>
  <description>Este paquete contiene un nodo publicador mínimo</description>  <!-- 1. Agregamos los metadatos de información del paquete -->
  <maintainer email="angmolgo@gmail.com">angmolgo</maintainer>                <!-- 1. Agregamos los metadatos de información del paquete -->
  <license>Apache-2.0</license>                                               <!-- 1. Agregamos los metadatos de información del paquete -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>      <!-- 2. Agregamos las dependencias del paquete -->
  <depend>rclcpp</depend>     <!-- 2. Agregamos las dependencias del paquete -->
  <depend>std_msgs</depend>   <!-- 2. Agregamos las dependencias del paquete -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
